<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".ComActivity">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:background="#087E7A"
        android:gravity="center"
        android:text="@string/Welcome"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_marginTop="30sp"
        android:background="#E2D92C"
        android:gravity="center"
        android:onClick="prof"
        android:text="@string/MyProfile"
        android:textColor="#5F0505"
        android:textColorHighlight="#FF0303"
        android:textColorHint="#F51818"
        android:textColorLink="#E90505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_marginTop="20sp"
        android:background="#F3DA91"
        android:gravity="center"
        android:onClick="addprd"
        android:text="@string/Add"
        android:textColor="#5F0505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_marginTop="20sp"
        android:background="#E2D92C"
        android:gravity="center"
        android:onClick="myprd"
        android:text="@string/edit"
        android:textColor="#5F0505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_marginTop="20sp"
        android:background="#F3DA91"
        android:gravity="center"
        android:onClick="about"
        android:text="@string/AboutUs"
        android:textColor="#5F0505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginTop="20sp"
        android:background="#E2D92C"
        android:gravity="center"
        android:onClick="contact"
        android:text="@string/ContactUs"
        android:textColor="#5F0505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_marginTop="20sp"
        android:background="#F3DA91"
        android:gravity="center"
        android:text="@string/Help"
        android:textColor="#5F0505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_marginTop="20sp"
        android:background="#E2D92C"
        android:gravity="center"
        android:onClick="out"
        android:text="@string/logout"
        android:textColor="#5F0505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>